<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center"
        style="@style/MyTextRegularTheme"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/driver_registration"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="24sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingLeft="18dp"
        android:fontFamily="@font/avenir_next_bold"
        android:hint="@string/your_name"
        android:background="@drawable/background_edit"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingLeft="18dp"
        android:fontFamily="@font/avenir_next_bold"
        android:hint="@string/email"
        android:background="@drawable/background_edit"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="textEmailAddress" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingLeft="18dp"
        android:fontFamily="@font/avenir_next_bold"
        android:hint="@string/enter_password"
        android:background="@drawable/background_edit"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="textPassword" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingLeft="18dp"
        android:fontFamily="@font/avenir_next_bold"
        android:hint="@string/duplicate_password"
        android:background="@drawable/background_edit"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="textPassword" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:theme="@style/MyCheckBox"
        android:textColor="@color/white"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/check_box"/>

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonBoldTheme"
        android:layout_marginTop="13dp"
        android:text="@string/register"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginBottom="73dp"
            android:src="@drawable/ic_wash_driver_black"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


</LinearLayout>