<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center"
        style="@style/MyTextRegularTheme"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/new_user"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonBoldTheme"
        android:layout_marginTop="33dp"
        android:text="@string/i_driver"
        android:textSize="16sp"
        android:id="@+id/i_driver"/>

    <com.google.android.material.button.MaterialButton
        style="@style/MyButtonBoldTheme"
        android:layout_marginTop="10dp"
        android:text="@string/car_wash"
        android:textSize="16sp"
        android:id="@+id/car_wash"/>

    <TextView
        android:id="@+id/i_am_driver"
        android:layout_gravity="center"
        style="@style/MyTextBoldTheme"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/i_have_account"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginBottom="73dp"
            android:src="@drawable/ic_wash_driver_black"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


</LinearLayout>