<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center_vertical"
        android:id="@+id/relative">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="меню"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/closeMenu"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="26dp"
            android:src="@drawable/ic_baseline_close_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="45dp"
            android:drawablePadding="35dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/find_a_sink"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_search_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="45dp"
            android:drawablePadding="35dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/my_reservations"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_reservation_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="45dp"
            android:drawablePadding="35dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_menu_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="45dp"
            android:drawablePadding="35dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/stock"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_favorites_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="45dp"
            android:drawablePadding="35dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/favorites"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_favorites_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="45dp"
            android:drawablePadding="35dp"
            android:fontFamily="@font/avenir_next_bold"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/ic_menu_setting" />
    </LinearLayout>
</RelativeLayout>